Change AppointmentTypes navigation page by blazor conventions in BlazorClient.Client #19

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/AppointmentTypes/AppointmentTypes.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/AppointmentTypes/AppointmentTypes.razor
@@ -1,4 +1,4 @@
-@page "/appointmenttypes"
+@page "/appointment-types"
 @layout Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Shared.MainLayout
 @inherits Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Pages.AppointmentTypes.AppointmentTypesComponent
 
