--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/MainLayout.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/MainLayout.razor
@@ -36,7 +36,7 @@
                 <ChildContent>
                     <RadzenPanelMenuItem Icon="home" Path="home" Text=@StringLocalizer["MainLayout_Menu_Home"]></RadzenPanelMenuItem>
                     <RadzenPanelMenuItem Icon="event" Path="appointments" Text=@StringLocalizer["MainLayout_Menu_Appointments"]></RadzenPanelMenuItem>
-                    <RadzenPanelMenuItem Icon="widgets" Path="appointmenttypes" Text=@StringLocalizer["MainLayout_Menu_AppointmentTypes"]></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Icon="widgets" Path="appointment-types" Text=@StringLocalizer["MainLayout_Menu_AppointmentTypes"]></RadzenPanelMenuItem>
                     <RadzenPanelMenuItem Icon="people_alt" Path="clients" Text=@StringLocalizer["MainLayout_Menu_Clients"]></RadzenPanelMenuItem>
                     <RadzenPanelMenuItem Icon="store" Path="clinics" Text=@StringLocalizer["MainLayout_Menu_Clinics"]></RadzenPanelMenuItem>
                     <RadzenPanelMenuItem Icon="face" Path="doctors" Text=@StringLocalizer["MainLayout_Menu_Doctors"]></RadzenPanelMenuItem>
