--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Rooms/Rooms.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Rooms/Rooms.razor
@@ -71,6 +71,25 @@
                         TItem="RoomDto"
                         Title=@StringLocalizer["Rooms_Grid_Column_Header_Name"]>
                     </RadzenDataGridColumn>
+
+                    <RadzenDataGridColumn
+                        Width="70px"
+                        Filterable="false"
+                        Sortable="false"
+                        TextAlign="TextAlign.Right"
+                        TItem="RoomDto">
+
+                        <Template Context="room">
+                            <RadzenButton
+                                ButtonStyle="ButtonStyle.Light"
+                                Click="@((args) => OnClickDetail(room))"
+                                Icon="find_in_page"
+                                Size="ButtonSize.Medium"
+                                Variant="Variant.Flat">
+                            </RadzenButton>
+                        </Template>
+
+                    </RadzenDataGridColumn>
                 </Columns>
             </RadzenDataGrid>
         </div>
