--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Doctors/Doctors.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Doctors/Doctors.razor
@@ -70,6 +70,25 @@
                         TItem="DoctorDto"
                         Title=@StringLocalizer["Doctors_Grid_Column_Header_FullName"]>
                     </RadzenDataGridColumn>
+
+                    <RadzenDataGridColumn
+                        Width="70px"
+                        Filterable="false"
+                        Sortable="false"
+                        TextAlign="TextAlign.Right"
+                        TItem="DoctorDto">
+
+                        <Template Context="doctor">
+                            <RadzenButton
+                                ButtonStyle="ButtonStyle.Light"
+                                Click="@((args) => OnClickDetail(doctor))"
+                                Icon="find_in_page"
+                                Size="ButtonSize.Medium"
+                                Variant="Variant.Flat">
+                            </RadzenButton>
+                        </Template>
+
+                    </RadzenDataGridColumn>
                 </Columns>
             </RadzenDataGrid>
         </div>
