Styling photo image for AddEditAppointment component page in Scheduling.BlazorClient.Client #19

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
@@ -96,6 +96,7 @@
 }
 
 .appointment-add-image-container img {
+  border-radius: 10%;
   border-style: none;
   max-height: 5rem;
   max-width: 5rem;
@@ -104,6 +105,7 @@
 
 /* AppointmentDetail Dialog */
 .appointment-detail-image {
+  border-radius: 10%;
   border-style: none;
   margin-right: 1rem;
   height: 8rem;
