Show RequiredWriterPolicy into Home page in ClinicManagement.BlazorClient.Client #23

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/Home/Home.razor
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/Home/Home.razor
@@ -32,15 +32,15 @@
                 </NotAuthorized>
             </AuthorizeView>
 
-            <AuthorizeView Policy="RequiredManager">
+            <AuthorizeView Policy="RequiredWriterPolicy">
                 <Authorized>
                     <p>
-                        The user has the RequiredManager policy.
+                        The user has the RequiredWriter policy.
                     </p>
                 </Authorized>
                 <NotAuthorized>
                     <p>
-                        The user does not have the RequiredManager policy.
+                        The user does not have the RequiredWriter policy.
                     </p>
                 </NotAuthorized>
             </AuthorizeView>
