--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/Clients/Clients.razor
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/Clients/Clients.razor
@@ -7,6 +7,14 @@
 @using Radzen
 @using Radzen.Blazor
 
+<AuthorizeView Policy="RequiredWriterPolicy">
+    <Authorized>
+        @{
+            CanWrite = true;
+        }
+    </Authorized>
+</AuthorizeView>
+
 <RadzenHeading
     Size="H1"
     Text=@StringLocalizer["Clients_Title"]>
@@ -18,7 +26,8 @@
             <RadzenButton
                 Click=@OnClickAdd
                 Icon="add"
-                Text=@StringLocalizer["Clients_Add_Button_Text"]>
+                Text=@StringLocalizer["Clients_Add_Button_Text"]
+                Visible=@CanWrite>
             </RadzenButton>
         </div>
 
@@ -127,7 +136,8 @@
                                 Click="@((args) => OnClickEdit(client))"
                                 Icon="edit"
                                 Size="ButtonSize.Medium"
-                                Variant="Variant.Flat">
+                                Variant="Variant.Flat"
+                                Visible="@CanWrite">
                             </RadzenButton>
 
                             <RadzenButton
@@ -136,7 +146,8 @@
                                 Icon="delete"
                                 Shade="Shade.Lighter"
                                 Size="ButtonSize.Medium"
-                                Variant="Variant.Flat">
+                                Variant="Variant.Flat"
+                                Visible="@CanWrite">
                             </RadzenButton>
 
                         </Template>
