--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/Doctors/Doctors.razor
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/Doctors/Doctors.razor
@@ -7,6 +7,8 @@
 @using Radzen
 @using Radzen.Blazor
 
+@attribute [Authorize("RequiredReaderPolicy")]
+
 <AuthorizeView Policy="RequiredWriterPolicy">
     <Authorized>
         @{
