--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/Patients/Patients.razor
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/Patients/Patients.razor
@@ -7,6 +7,8 @@
 @using Radzen.Blazor
 @using ViewModels.Patients
 
+@attribute [Authorize("RequiredReaderPolicy")]
+
 <AuthorizeView Policy="RequiredWriterPolicy">
     <Authorized>
         @{
