--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/MainLayout.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/MainLayout.razor
@@ -17,6 +17,20 @@
 
                 <div class="col-7 d-flex align-items-center justify-content-end">
                     <UserSettingsComponent></UserSettingsComponent>
+                    <RadzenProfileMenu Click="@ProfileMenuClick">
+                        <Template>
+                            <RadzenLabel Text="@($"{(SecurityService.User?.Name)}")">
+                            </RadzenLabel>
+                            <RadzenImage style="border-radius: 16px; height: 32px; width: 32px; background-color: gray;">
+                            </RadzenImage>
+                        </Template>
+                        <ChildContent>
+                            <RadzenProfileMenuItem Text=@(string.Format(StringLocalizer["MainLayout_ProfileMenu_Username"], SecurityService.User?.Username))>
+                            </RadzenProfileMenuItem>
+                            <RadzenProfileMenuItem Text=@StringLocalizer["MainLayout_ProfileMenu_Logout"] Value="Logout" Icon="logout">
+                            </RadzenProfileMenuItem>
+                        </ChildContent>
+                    </RadzenProfileMenu>
                 </div>
             </div>
         </ChildContent>
