--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/MainLayout.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/MainLayout.razor
@@ -3,6 +3,17 @@
 @using Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Shared.Components.Spinner
 @using Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Shared.Components.UserSettings
 
+@if(!IsAuthenticated)
+{
+    <div style="height: 100vh;">
+        @Body
+    </div>
+
+    <SpinnerComponent></SpinnerComponent>
+
+    return;
+}
+
 <RadzenDialog></RadzenDialog>
 <RadzenNotification></RadzenNotification>
 
