Secure pages in Scheduling.BlazorClient.Client #23

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Appointments/Appointments.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Appointments/Appointments.razor
@@ -6,6 +6,8 @@
 @using Radzen.Blazor
 @using ViewModels.Appointments
 
+@attribute [Authorize("RequiredWriterPolicy")]
+
 <RadzenHeading
     Size="H1"
     Text=@StringLocalizer["Appointments_Title"]>
