--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Clients/Clients.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Clients/Clients.razor
@@ -7,6 +7,8 @@
 @using Radzen
 @using Radzen.Blazor
 
+@attribute [Authorize("RequiredReaderPolicy")]
+
 <RadzenHeading
     Size="H1"
     Text=@StringLocalizer["Clients_Title"]>
