--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Patients/Patients.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Patients/Patients.razor
@@ -7,6 +7,8 @@
 @using Radzen.Blazor
 @using ViewModels.Patients
 
+@attribute [Authorize("RequiredReaderPolicy")]
+
 <RadzenHeading
     Size="H1"
     Text=@StringLocalizer["Patients_Title"]>
