Force loading page when the session was logout by the AuthenticationStateProvider in Scheduling.BlazorClient.Client #23

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/RedirectToLogin.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/RedirectToLogin.razor
@@ -1,4 +1,5 @@
 @inject NavigationManager _navigationManager
+@inject Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Services.ISecurityService _securityService
 
 @code {
     [Parameter]
@@ -7,8 +8,13 @@
     protected override void OnInitialized()
     {
         if (IsAuthenticated)
-            _navigationManager.NavigateTo("unauthorized", false);
+        {
+            _navigationManager.NavigateTo("unauthorized");
+        }
         else
-            _navigationManager.NavigateTo("login", false);
+        {
+            bool isSessionForcedToLogout = _securityService.User != null;
+            _navigationManager.NavigateTo("login", isSessionForcedToLogout);
+        }
     }
 }
