--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/Components/UserSettings/UserSettingsComponent.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/Components/UserSettings/UserSettingsComponent.razor
@@ -1,4 +1,4 @@
-<button class="rz-sidebar-toggle" @onclick=@OpenSettingsDialog>
+<button class="rz-sidebar-toggle" style="margin-right: 0;" @onclick=@OpenSettingsDialog>
     <RadzenIcon
         class="rzi d-flex align-items-center"
         Icon="settings">
