AppNotificationComponent in ClinicManagement.BlazorClient.Client #25

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/assets/css/styles.css
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/assets/css/styles.css
@@ -6,6 +6,7 @@
 /* Import the Radzen CSS files */
 @import './styles-generated.css';
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url('components/appnotification.css');
 @import url('components/language.css');
 @import url('components/radzen-text-box-search.css');
 @import url('components/spinner.css');
