--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/assets/css/styles.css
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/assets/css/styles.css
@@ -161,3 +161,16 @@
   height: 100%;
   padding: 3rem;
 }
+
+/* Topbar */
+.topbar-container {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  z-index: 1;
+}
+
+.topbar-menu {
+  float: left;
+  position: relative;
+}
